- added more code samples to matrix/quaternion chapters

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,10 @@
-#Sun Apr 01 13:22:41 EEST 2012
 eclipse.preferences.version=1
+encoding//capitolul1/matrici.tex=UTF-8
+encoding//capitolul1/quaternion.tex=UTF-8
 encoding//capitolul1/sisteme_de_coordonate.tex=UTF-8
 encoding//capitolul1/sisteme_grafice.tex=UTF-8
+encoding//capitolul1/transformari_liniare.tex=UTF-8
 encoding//capitolul1/vectori.tex=UTF-8
 encoding//setup/front.tex=UTF-8
+encoding/<project>=UTF-8
+encoding/lucrare_main.tex=UTF-8
